--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon node server.js",
     "start": "node server.js"
   },
   "repository": {
@@ -22,5 +22,8 @@
     "dayjs": "^1.11.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.8"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
